8281181: Do not use CPU Shares to compute active processor count